# Maestra

./: .gitignore  AGENTS.md  CMakeLists.txt  M5_SETUP_SUMMARY.md  README.md  REVOLUTIONARY_AUDIO_ENGINE_SUMMARY.md  icon.icns  repomap
.github/agents/: my-agent.agent.md
.github/workflows/: release.yml  validation.yml
cmake/: M5Optimizations.cmake
config/: README.md  build.env.example
config/entitlements/: app.entitlements  plugin.entitlements
docs/: APPLE_PACKAGING.md  AUDIO_ENGINE_ARCHITECTURE.md  CHATGPT_PROMPTS_AUDIO_ENGINE.md  DSP_ENGINE_DESIGN_PROMPTS.md  M5_BUILD_GUIDE.md  OPERATIONS_MANUAL.md  PRODUCTION_PACKAGING.md  VALIDATION_PROCEDURES.md
scripts/macos/: build_and_package.sh  build_pkg.sh  codesign.sh  dmg_setup.scpt  functional_validate.sh  notarize.sh  pre_release_validate.sh  production_build.sh  quick_juce_upgrade.sh  setup_m5_build.sh  validate.sh
src/App/: Main.cpp  OrchestraSynthApplication.cpp  OrchestraSynthApplication.h
src/DSP/: ConvolutionEngine.h  HarmonicEnhancer.h  ImpulseResponseLoader.h  MacroModulationMatrix.h  NeuralWaveguideProcessor.h  Oversampler.h  PresetMorphingEngine.h  QuantumDSPCore.h  README.md  SpectralIntelligence.h  StabilityGuardian.h
src/Engine/: OrchestraSynthEngine.h
src/Platform/: AVAudioEngineManager.h  AVAudioEngineManager.mm
src/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Systems/: CrashReporter.h  Logger.h  PerformanceMonitor.h  PresetManager.h
src/UI/: MixerComponent.cpp  MixerComponent.h  PresetBar.cpp  PresetBar.h  SectionStripComponent.cpp  SectionStripComponent.h
